--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
     background: var(--panel);
     color: #fff;
     font-weight: 700;
-    white-space: nowrap;
     width: 190px;
     padding: 14px 16px;
     border-right: 1px solid rgba(255,255,255,.1);
@@ -304,6 +303,147 @@
 
       </tbody>
     </table>
+    <br>
+    <hr>
+    <h2 class="dayhead">Day 2: Wednesday, 24 September 2025</h2>
+
+    <table class="program" role="table" aria-label="auIGF 2025 Program Day 2">
+      <thead>
+        <tr>
+          <th scope="col">Time</th>
+          <th scope="col">Program Description</th>
+        </tr>
+      </thead>
+      <tbody>
+
+        <tr class="slot highlight">
+          <td class="time">9:00 – 10:00AM</td>
+          <td class="desc">
+            <div class="title-sm">Town Hall – Position Paper</div>
+            <p>This open forum is an opportunity for sharing views and feedback on the draft auIGF 2025 position papers circulated in advance of the auIGF. Attendees can test general views of the participants as a whole about whether the direction set out is agreeable to most.</p>
+            <p><strong>Papers under discussion:</strong></p>
+            <ul>
+              <li>The proposal to explore and develop a <a href="https://auigf.au/position-paper">Social Contract for Digital Wellbeing in Australia</a> (new paper for 2025)</li>
+              <li>An update to our <a href="https://auigf.au/position-paper">2024 paper</a> for the WSIS+20 review</li>
+            </ul>
+            <p>This session will be led and moderated by auIGF Multi-Stakeholder Steering Committee members.</p>
+          </td>
+        </tr>
+
+        <tr class="slot alt break">
+          <td class="time">10:00 – 10:30AM</td>
+          <td class="desc">
+            <div class="title-sm">Morning Tea</div>
+          </td>
+        </tr>
+
+        <tr class="slot">
+          <td class="time">10:30 – 11:30AM</td>
+          <td class="desc">
+            <div class="title-sm">New Playgrounds, New Rules: The Future of Child Digital Rights &amp; Skills</div>
+            <p>An interactive questionnaire, panel and Q&amp;A examining how children build digital resilience amid debates regarding best practice for child online protection.</p>
+            <p><strong>Speakers:</strong></p>
+            <ul>
+              <li>Jay Chew – STEM educator</li>
+              <li>Noelle de Guzman – Internet Society</li>
+              <li>Michael Des Tombe – Netsafe New Zealand</li>
+              <li>Rury Demsey – International Telecommunication Union, Asia-Pacific</li>
+              <li>Anna Christina D’Addio – UNESCO Global Education Monitoring Report</li>
+            </ul>
+            <p><strong>Moderators:</strong></p>
+            <ul>
+              <li>Abdul Matheen – Project You</li>
+              <li>Ellen Dixon – Internet Society Youth Ambassador</li>
+            </ul>
+          </td>
+        </tr>
+
+        <tr class="slot alt">
+          <td class="time">11:40AM – 12:40PM</td>
+          <td class="desc">
+            <div class="title-sm">How might approaches to digital inequities from the First Peoples of Australia and indigenous communities enhance global Internet governance?</div>
+            <p>This panel explores lived experiences in addressing digital inequities and the impact that community-led responses can have.</p>
+            <p><strong>Speakers:</strong></p>
+            <ul>
+              <li>Ana McAllister – InternetNZ</li>
+              <li>Susan Beetson – auIGF First Peoples Internet Governance and Policy Fellowship Mentor</li>
+              <li>Simon O'Toole – Alliance ICT, Leap Foundation &amp; Dreaming Machines</li>
+              <li>Andrew Molivurae – TRBR Vanuatu</li>
+            </ul>
+            <p><strong>Moderator:</strong></p>
+            <ul>
+              <li>Rose Jamieson – InternetNZ</li>
+            </ul>
+          </td>
+        </tr>
+
+        <tr class="slot break">
+          <td class="time">12:40 – 1:45PM</td>
+          <td class="desc">
+            <div class="title-sm">Lunch</div>
+          </td>
+        </tr>
+
+        <tr class="slot alt">
+          <td class="time">12:50 – 1:30PM</td>
+          <td class="desc">
+            <div class="title-sm">Lunch Session</div>
+            <p><strong>.au Licensing Rules Review: Policy Advisory Panel open session</strong></p>
+            <p>The Chair of auDA’s external Policy Advisory Panel, Matt Healy, together with two members of the Panel, will host an open lunchtime session to provide an update on the <a href="https://www.auda.org.au/public-impact/have-your-say/policy-panels/au-licensing-rules-review-2025/">.au Licensing Rules Review 2025</a>.</p>
+            <p>This session is available to on-site attendees only.</p>
+          </td>
+        </tr>
+
+        <tr class="slot">
+          <td class="time">1:45 – 2:45PM</td>
+          <td class="desc">
+            <div class="title-sm">Fostering Trust Online for Australians – The Human Element</div>
+            <p>Drawing on new findings from <a href="https://www.auda.org.au/news-insights/research-reports/digital-lives-of-australians/">auDA’s Digital Lives of Australians 2025 research</a>, this panel explores where trust gaps exist in areas like cybersecurity and AI.</p>
+            <p><strong>Speakers:</strong></p>
+            <ul>
+              <li>Rachael Falk – Ashurst Risk Advisory</li>
+              <li>Lizzie O’Shea – Digital Rights Watch</li>
+              <li>Rebecca Papillo – auDA</li>
+            </ul>
+            <p><strong>Moderator:</strong></p>
+            <ul>
+              <li>Sylvia Cadena – World Wide Web Consortium (W3C)</li>
+            </ul>
+          </td>
+        </tr>
+
+        <tr class="slot alt break">
+          <td class="time">2:45 – 3:15PM</td>
+          <td class="desc">
+            <div class="title-sm">Afternoon Tea</div>
+          </td>
+        </tr>
+
+        <tr class="slot">
+          <td class="time">3:15 – 4:45PM</td>
+          <td class="desc">
+            <div class="title-sm">Closing Plenary</div>
+            <p>The 2025 Closing Plenary for auIGF will have three components:</p>
+            <ul>
+              <li>Testing the community consensus on the Position Papers</li>
+              <li>Rapporteurs’ readouts of the proceedings</li>
+              <li>A brief panel reflecting on the event and next steps</li>
+            </ul>
+            <p><strong>Panellists:</strong></p>
+            <ul>
+              <li>Patrick Kane – Verisign</li>
+              <li>Lizzie O’Shea – Digital Rights Watch</li>
+              <li>Ian Sheldon – Department of Infrastructure, Transport, Regional Development, Communications, Sport and the Arts</li>
+              <li>Cameron McTernan – The University of South Australia</li>
+            </ul>
+            <p>The closing remarks by auIGF Chair Donna Austin will include a call to action and an update on next steps for the auIGF and its community.</p>
+            <p class="sponsor">Sponsored by Verisign</p>
+          </td>
+        </tr>
+
+      </tbody>
+    </table>
+    <br>
   </main>
 </body>
 </html>
